<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#fff"
  android:paddingTop="@dimen/main_padding_top"
  android:paddingLeft="@dimen/main_padding_left"
  android:paddingRight="@dimen/main_padding_right">
	  <TextView 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:textSize="@dimen/main_title_size"
	  android:text="@string/main_title"/>
	  <LinearLayout 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="@dimen/main_under_title_margin_top">
		  <EditText
		  android:id="@+id/main_customer_name"
		  android:layout_width="fill_parent"
		  android:layout_height="@dimen/main_edit_height"
		  android:singleLine="true"
		  android:inputType="textCapWords"
		  android:hint="@string/main_customer_name"
		  android:layout_marginRight="@dimen/main_edit_text_margin_right"
		  android:layout_weight="0.5"/>
		  <EditText
		  android:id="@+id/main_customer_firstname"
		  android:layout_width="fill_parent"
		  android:layout_height="@dimen/main_edit_height"
		  android:singleLine="true"
		  android:inputType="textCapWords"
		  android:hint="@string/main_customer_firstname"
		  android:layout_marginLeft="@dimen/main_edit_text_margin_left"
		  android:layout_weight="0.5"/>
	  </LinearLayout>
	  <LinearLayout 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="@dimen/main_under_title_margin_top">
		  <TextView 
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:text="@string/main_contract_date"
		  android:paddingLeft="5dip"
		  android:textSize="@dimen/main_date_text_size"
		  android:layout_marginRight="@dimen/main_edit_text_margin_right"
		  android:layout_weight="0.5"/>
		  <TextView 
		  android:id="@+id/main_contract_date_text"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:text="@string/main_na"
		  android:textSize="@dimen/main_date_text_size"
		  android:layout_marginLeft="@dimen/main_edit_text_margin_left"
		  android:gravity="center_horizontal"
		  android:layout_weight="0.5"/>
	  </LinearLayout>
	  <RelativeLayout 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="@dimen/main_over_signature_margin_top">
		  <ImageView 
		  android:id="@+id/main_signature_bitmap"
		  android:layout_height="@dimen/main_signature_img_height" 
		  android:layout_width="@dimen/main_signature_img_width"
	  	  android:padding="5dip"
		  android:background="@drawable/signature_border"
		  android:layout_alignParentRight="true"
		  android:onClick="getSignature"
		  />
	  </RelativeLayout>  
</LinearLayout>
